--- a/index.html
+++ b/index.html
@@ -1,97 +1,54 @@
-<!DOCTYPE html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Knoetical</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap and Font Awesome css-->
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Google fonts-->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
-    <!-- Theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="favicon.png">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-    <div style="background-image: url('img/paris.jpg')" class="main"> 
-      <div class="overlay"></div>
-      <div class="container">
-        <p class="social">
-          <a href="https://www.facebook.com/Knoetical-422454281292611/" title="" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://twitter.com/knoetical" title="" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="https://plus.google.com/106103081877886697378" title="" class="gplus"><i class="fa fa-google-plus"></i></a>
-          <!--<a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a>-->
-        </p>
-        <h1 class="cursive">Knoetical</h1>
-        <h2 class="sub">something awesome is coming soon!! </h2>
-        <!--
-        <div class="mailing-list">
-          <h3 class="mailing-list-heading">Join our mailing list and we will notify you once it is ready!</h3>
-          <div class="row">
-            <form class="form-inline">
-              <div class="form-group">
-                <label for="email" class="sr-only"></label>
-                <input type="email" placeholder="jane.doe@example.com" id="email" class="form-control transparent">
-              </div>
-              <button class="btn btn-danger">subscribe </button>
-            </form>
-          </div>
-        </div>
-        -->
-      </div>
-      <div class="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <p>&copy;2017 Knoetical</p>
-            </div>
-            <div class="col-md-6">
-              <p class="credit">Code by <a href="https://www.bootstrapious.com">Bootstrapious</a><br />& <a href="https://fity.cz">Fity</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
+<!doctype html>
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
+
+  <title>API Documentation | Knoetical</title>
+
+  <!-- Flatdoc -->
+  <script src="/js/jquery.min.js"></script>
+  <script src='/js/legacy.js'></script>
+  <script src='/js/flatdoc.js'></script>
+
+  <!-- Flatdoc theme -->
+  <link  href='/css/style.css' rel='stylesheet'>
+  <script src='/js/script.js'></script>
+
+  <!-- Meta -->
+  <meta content="api documentation | Knoetical" property="og:title">
+  <meta content="api documentation | Knoetical" name="description">
+
+  <!-- Initializer -->
+  <script>
+    Flatdoc.run({
+      fetcher: Flatdoc.file('/Readme.md')
+    });
+  </script>
+</head>
+<body role='flatdoc'>
+
+  <div class='header'>
+    <div class='left'>
+      <h1>Knoetical</h1>
+      <ul>
+        <li><a href='https://www.knoetical.com' target='_blank'>Home</a></li>
+        <!-- <li><a href='https://github.com/USER/REPO/issues'>Issues</a></li> -->
+      </ul>
     </div>
-    <!--
-    <button type="button" data-toggle="collapse" data-target="#style-switch" id="style-switch-button" class="btn btn-template-primary btn-sm"><i class="fa fa-cog fa-2x"></i></button>
-    <div id="style-switch" class="collapse">
-      <h4 class="text-uppercase">Select theme variant</h4>
-      <form class="mb-small">
-        <select name="page" id="page" class="form-control">
-          <option value="">select variant</option>
-          <option value="index.html">image background</option>
-          <option value="video.html">video background</option>
-        </select>
-      </form>
+    <div class='right'>
+      <!-- GitHub buttons: see http://ghbtns.com -->
+      <!-- <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe> -->
     </div>
-    -->
-    <!-- JAVASCRIPT FILES -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/front.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-    <!--
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-    -->
-  </body>
+  </div>
+
+  <div class='content-root'>
+    <div class='menubar'>
+      <div class='menu section' role='flatdoc-menu'></div>
+    </div>
+    <div role='flatdoc-content' class='content'></div>
+  </div>
+
+</body>
 </html>
